--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts"
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
