--- a/auth/package.json
+++ b/auth/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "start": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.6.2",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
