ADD: Hashed Password

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,6 +14,6 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/*"
-          # - src: "src/**/*.ts"
+          # - src: "src/*"
+          - src: "src/**/*.ts"
             dest: .
