--- a/auth/package.json
+++ b/auth/package.json
@@ -4,8 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -24,5 +31,13 @@
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.1",
+    "mongodb-memory-server": "^8.9.3",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3"
   }
 }
