ADD: Sign in, reusable api, UPDATE: domain

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - e-ticket.dev
+    - ticketing.dev
     # secretName: e-ticket-secret
   rules:
-  - host: e-ticket.dev
+  - host: ticketing.dev
     http:
       paths:
       - path: /api/users/?(.*)
