--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:alpine
 
 WORKDIR /app
-COPY package*.json .
+COPY package*.json ./
 RUN npm install --only=prod
 COPY . .
 CMD ["npm", "start"]	
+
+
+
