--- a/infra/k8s/auth.depl.yaml
+++ b/infra/k8s/auth.depl.yaml
@@ -16,6 +16,8 @@ spec:
         - name: auth
           image: sajeebxn/auth
           env:
+            - name: MONGO_URI
+              value: 'mongodb://tickets-mongo-srv:27017/auth'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
