TICKETS@UPDATE: Ingress Nginx

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -25,7 +25,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: auth-srv
+            name: tickets-srv
             port:
               number: 3000          
       - path: /?(.*)
